# api/router/router.go
@@ -3,17 +3,18 @@ package router
 import (
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
+	amqp "github.com/rabbitmq/amqp091-go"
 	httpSwagger "github.com/swaggo/http-swagger"
-	urlshort "github.com/vit0rr/publish-and-consume/api/internal/url-short"
-	_ "github.com/vit0rr/publish-and-consume/cmd/api/docs" // docs is generated by Swag CLI, you have to import it.
+	event "github.com/vit0rr/publish-and-consume/api/internal/event"
+	_ "github.com/vit0rr/publish-and-consume/docs" // docs is generated by Swag CLI, you have to import it.
 	"github.com/vit0rr/publish-and-consume/pkg/deps"
 	"github.com/vit0rr/publish-and-consume/pkg/telemetry"
 	"go.mongodb.org/mongo-driver/mongo"
 )
 
 type Router struct {
-	Deps     *deps.Deps
-	urlshort *urlshort.HTTP
+	Deps  *deps.Deps
+	event *event.HTTP
 }
 
 func (router *Router) BuildRoutes() *chi.Mux {
@@ -32,19 +33,16 @@ func (router *Router) BuildRoutes() *chi.Mux {
 		r.Get("/swagger/*", httpSwagger.Handler(
 			httpSwagger.URL("http://localhost:8080/swagger/doc.json"), //The url pointing to API definition
 		))
-		r.Get("/{id}", telemetry.HandleFuncLogger(router.urlshort.Redirect))
-		r.Route("/short-url", func(r chi.Router) {
-			r.Post("/", telemetry.HandleFuncLogger(router.urlshort.ShortUrl))
-		})
+		r.Post("/", telemetry.HandleFuncLogger(router.event.PublishToQueue))
 
 	})
 
 	return r
 }
 
-func New(deps *deps.Deps, db mongo.Database) *Router {
+func New(deps *deps.Deps, db mongo.Database, amqpConn *amqp.Connection) *Router {
 	return &Router{
-		Deps:     deps,
-		urlshort: urlshort.NewHTTP(deps, &db),
+		Deps:  deps,
+		event: event.NewHTTP(deps, &db, amqpConn),
 	}
 }
